--- a/DatingApp-SPA/src/app/components/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class='navbar navbar-expand-md navbar-dark bg-primary'>
+<nav class='navbar navbar-expand-md navbar-dark bg-primary'>
   <div class="container">
     <a class='navbar-brand' [routerLink]="['/home']">Dating App</a>
 
@@ -33,4 +33,4 @@
       <button [disabled]='!loginForm.valid' class='btn btn-success my-2 my-sm-0' type='submit'>Login</button>
     </form>
   </div>
-</nav> -->
+</nav>
